--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -24,12 +24,13 @@ a,
 @media (min-width: 1024px) {
   body {
     display: flex;
-    place-items: center;
+    /*place-items: center;*/
+    background-color: #cecece;
   }
 
   #app {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+    /*grid-template-columns: 1fr 1fr;*/
+    padding: 2rem;
   }
 }
